--- a/posts/Aug14-2025.md
+++ b/posts/Aug14-2025.md
@@ -44,7 +44,7 @@ Not all are that fun, but I've learned to embrace them.
 
 I think everyone should have one — like a tech stack, but for interview prep. Mine looks like this:  
 
-1. **NeetCode + LeetCode** for DSA (and no, "No Cluely" won't cut it).  
+1. **NeetCode + LeetCode** for DSA (and no, Cluely won't cut it, great tool, but interviewers know when you're cheating.).  
 2. **GitHub job repos** that post new openings daily.  
 3. **AWS Associate Developer Cert** (still prepping for the exam).  
 4. **Projects.** Build *anything*. Projects teach you more than most professors ever will.  
